[package]
name = "vex_elo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotevents = "0.5.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.31"
async-std = "1.12.0"
serde = "1.0"
serde_json = "1.0"
